# recsys2025

./: .gitignore  README.md  analyse.ipynb  pyproject.toml
baseline/data_utils/: split_data.py  utils.py
baseline_pl/.ipynb_checkpoints/: analyse-checkpoint.py
baseline_pl/aggregated_features_baseline/: calculators.py  create_embeddings.py  features_aggregator.py
baseline_pl/test/: test_features_aggregator.py
training_pipeline/: task_constructor.py  train_runner.py
validator/: embeddings_validator.py
